JDK 8 compile fixes